--- a/assignment_frontend/package.json
+++ b/assignment_frontend/package.json
@@ -27,6 +27,7 @@
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
