Add Kubernetes configuration for Assignment application with MySQL and frontend services
- Created a new Kubernetes Pod configuration in `kubernate.yml` for the Assignment application.
- Configured three containers: MySQL database, frontend, and backend services.
- Set environment variables for MySQL and Spring Boot configurations.
- Defined volume mounts for persistent data storage and frontend application files.
- Added host path for frontend application to facilitate local development.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,12 +11,27 @@ spring.datasource.password=yash
 # JDBC driver for MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate properties
-# Automatically updates the database schema based on entity changes
-spring.jpa.hibernate.ddl-auto=update
-# Enable SQL query logging in the console
-spring.jpa.show-sql=true
 # Format SQL queries in the logs for better readability
 spring.jpa.properties.hibernate.format_sql=true
 # Include comments in SQL logs for better context
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+# Redis Configuration
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=2000
+
+# Cache time-to-live
+spring.cache.redis.time-to-live=600000
+spring.cache.cache-names=actualPercentages,deviations,adjustments,analyzeResults,allEmployees
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Server Configuration
+server.port=8080
+
+# Logging
+logging.level.org.springframework.cache=DEBUG
