--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# version: '3.8'
 
 services:
   # MySQL Database Service
@@ -48,8 +48,8 @@ services:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://backend:8080
-    depends_on:
-      - backend
+    # depends_on:
+    #   - backend
     volumes:
       - ./frontend:/app
       - /app/node_modules
